fix: adjusted banner to align properly for desktop

--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 4.25rem;
+    margin-right: 8.8em;
 }
 
 .banner-left {
@@ -92,10 +93,24 @@ body {
     align-items: flex-start;
     justify-content: center;
     /* border: 2px solid red; */
-    width: 40vw;
+    width: 40%;
     height: 60vh;
     gap: 20px;
     /* height: auto; */
+}
+
+.banner-right {
+    width: 30%;
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.banner-right img {
+    width: 100%;
+    height: 100%;
 }
 
 .banner-head {
@@ -120,8 +135,14 @@ body {
     color: #534C64;
     font-size: 20px;
     font-weight: 500;
+    
 }
-
+.btn-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
 .btn-primary {
     color: #FFF;
     font-size: 20px;
